<resources>
    <string name="app_name">Ratatouille</string>
    <string name="finding_remy">Finding Remy</string>

    <string name="username">Username/Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="register">Register</string>
    <string name="confirm_password">Confirm Password</string>

    <string name="radio_admin">Admin</string>
    <string name="radio_user">User</string>

    <string name="not_found">.NOT FOUND.</string>
    <string name="title_activity_add_rat">AddRatActivity</string>


    <string name="unique_key">unique_key</string>
    <string name="city">City</string>
    <string name="borough">Borough</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="DateCreated">DateCreated</string>
    <string name="LocationType">LocationType</string>
    <string name="IncidentZip">IncidentZip</string>
    <string name="IncidentAddress">IncidentAddress</string>
    <string name="Longitude">Longitude</string>
    <string name="Latitude">Latitude</string>
    <string name="Borough">Borough</string>
    <string name="City">City</string>

    <string name="cancel">cancel</string>
    <string name="submit">submit</string>
    <string name="Add_Rat">add_rat</string>
    <string name="Submit">Submit</string>
    <string name="EndDate">EndDate</string>
    <string name="StartDate">StartDate</string>
    <string name="YYYYMMDD">YYYYMMDD</string>
    <string name="YYYY_MM_DD">YYYY_MM_DD</string>

    <string name="filter">Filter</string>
    <string name="Date">Date</string>
    <string name="FROM">FROM</string>
    <string name="TO">TO</string>
    <string name="SORT">SORT</string>
    <string name="DESC">DESC</string>
    <string name="ASC">ASC</string>
    <string name="Login">Login</string>
    <string name="Register">Register</string>
    <string name="Map">Map</string>
    <string name="List">List</string>
    <string name="Graph">Graph</string>
    <string name="Settings">Settings</string>

</resources>
